refactor: 언마운트 위해 가상스레드로 카운트다운 진행하며 새로운 판 준비.